<resources>
    <string name="app_name">Roommate Shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_activity" />
    <string name="menu">Menu</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="create_shopping_list">Create Shopping List</string>
    <string name="submit">Submit</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="return_to_home">Return to Home</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="account_info">Account Info</string>
    <string name="list_name">List Name...</string>
    <string name="roommates">Roommates</string>
    <string name="shopping_list_name">Shopping List Name</string>
    <string name="edit_roommates">Edit Roommates</string>
    <string name="delete_list">Delete List</string>
    <string name="add_roommates">Add Roommates</string>
    <string name="remove_roommates">Remove Roommates</string>
    <string name="return_to_settings">Return to Settings</string>
</resources>