<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ScrollView
        android:layout_width="350sp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/changePasswordPageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/oldPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/editOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/newPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/editNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/confirmNewPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_password" />

            <EditText
                android:id="@+id/editConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/submitChangePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>