<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRoommatesContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditListInfoFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="70dp">

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="375sp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_list_name" />

                <TextView
                    android:id="@+id/listNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addRoommates"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="add" />

                    <Button
                        android:id="@+id/removeRoommates"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="remove" />
                </LinearLayout>

                <TextView
                    android:id="@+id/roommatesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/roommates" />

                <ScrollView
                    android:id="@+id/roommateScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="375sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TableLayout
                            android:id="@+id/roommateList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp">

                        </TableLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/returnToHomePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:text="@string/return_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3" />




</androidx.constraintlayout.widget.ConstraintLayout>